Created first Thymeleaf EMPTY template

--- a/java-spring-boot/index.html
+++ b/java-spring-boot/index.html
@@ -1163,7 +1163,11 @@ String idetiRecepta(@RequestBody Receptas ivedamasReceptas) {
                         <div class="spoiler-button">
                             <button></button>
                         </div>
-                    </div></li>    
+                    </div></li>
+                    <li>Kai įsikelsite dependency, BŪTINAI, paspauskite mėlyną maven ikoną, kuri turėjo atsirasti viršutiniame dešiniame kampe. Kai ją paspausite, parsiųs failus/atnaujins projektą. Tada, galima jau eiti rašyti kodą.</li>
+                    <li>Dirbant su Thymeleaf'u yra naudojamas kitoks Controlleris. Mes dirbome su RestControlleriais, o čia naudosime paprastą/mvc Controllerį. Rest controlleriai yra naudojami RESTful programoms, kurios yra modernių programų/puslapių principas, tačiau joms dažnai vizualus puslapis ir duomenų naudojimas yra atskiri dalykai ir pilną puslapį vienam naudojant RESTful būtų per didelis darbas, todėl jums užduotį davė su MVC.</li>
+                    <li>Taip pat, kai naudosime Thymeleaf, tai jame bus naudojami HTML/CSS "šablonai", kuriuose bus atvaizduojamas puslapio šablonas ir tam tikrose vietose sudėsime "placeholderius", tai vietos į kurias "paduosime" kintamuosius. Gal dabar daug naujų žodžių, bet viską pasižiūrėsime dabar detaliau:</li>
+                    <li>Projekto failų resources -> templates dalyje susikurkite naują failą, pvz. "testinis_puslapis.html". Jame nieko daug nedarysime, tiesiog išvesime "Sveiki, TĄ_KĄ_PADAVĖT_PER_PARAMETRUS", jog išsibandytume ar Thymeleaf'as viską gerai gauna iš controllerio/nuorodų. <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-spring-boot/screenshot40.jpg" alt="Kodo foto"></div></span></li>    
                 </div>
             </div>
         </div>
