Started talking about bootstrap tables

--- a/java-spring-boot/index.html
+++ b/java-spring-boot/index.html
@@ -1367,6 +1367,16 @@ public class ReceptasMVController {
                         </div>
                     </div></li>
                     <li>Kai jau turime paruoštą(sudėjome į model visus placeholderius kažką) Controller funkciją, tai galima ją ištestuoti. Kadangi čia jau puslapis, tai per Postman testuoti nebūtina, bet galima per jį susikurti nuorodą, jei tai patogiau. Kadangi nuorodoj turi būti dar parametras "vardas". Tai, tarkim pavyzdinė nuoroda gali būti: <a href="http://localhost:8080/th/test/greeting?vardas=Dovydas">http://localhost:8080/th/test/greeting?vardas=Dovydas</a>. Galite ją ištestuoti ir turėtų puslapis atrodyti štai taip: <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-spring-boot/screenshot42.jpg" alt="Kodo foto"></div></span></li>
+                    <li>Jeigu viskas veikia, galima eiti prie kito etap, jeigu ne - kreipkitės.</li>
+                </div>
+            </div>
+            <div class="section">
+                <div class="section-header">
+                    <h3 id="section1">Recepto/filmo/knygos atvaizdavimas puslapyje</h3>
+                </div>
+                <div class="theory-text">
+                    <li>Kai ištestavome ar veikia Thymeleaf, metas pradėti daryti konkretesnes užduotis. Taigi, pasižiūrėsime kaip atvaizduoti Receptą puslapyje.</li>
+                    <li>Visų pirma, reikia susikurti Thymeleaf HTML šabloną. Galima Receptą puslapyje atvaizduoti vienoje pastraipoje, viską tiesiog iš eilės surašyti, bet taip atrodytų negražiai. Galima sudėlioti kiekvieną kintamąjį į atskirą pastraipą, arba atskirus list'o elementus (li), arba atskirus div'us. Šiam pavyzdyje pasinaudosiu CSS Bootstrap'o lentele, jog galėčiau gana estetiškai atvaizduoti duomenis per daug nieko pats html'e/css'e nedarydamas. Daugiau info: <a href="https://getbootstrap.com/docs/4.0/content/tables/">https://getbootstrap.com/docs/4.0/content/tables/</a> arba <a href="https://www.w3schools.com/bootstrap4/bootstrap_tables.asp">https://www.w3schools.com/bootstrap4/bootstrap_tables.asp</a></li>
                 </div>
             </div>
         </div>
