--- a/java-spring-boot/index.html
+++ b/java-spring-boot/index.html
@@ -2225,7 +2225,239 @@ public class ReceptasMVController {
                     <h3 id="section1">Recepto/Autoserviso/Filmo/Skelbimo paieška puslapyje.</h3>
                 </div>
                 <div class="theory-text">
-                    
+                    <li>Ką mums reikia padaryti paieškai, tai tiesiog puslapį, kuriame yra mygtukas ir įvedimo laukelis bei dar galime kažkokį tai tekstą parašyti, pvz. "Įveskite pavadinimą, norint ieškoti ir spauskite mygtuką". Toliau, šitas puslapis turėtų nuskaityti ką įvedė į įvedimo laukelį ir nusiųsti tą pavadinimą mūsų kitai funkcijai. Toliau, ta kita (jau mūsų sukurta funkcija) ras ir tuo pačiu atvaizduos receptą pagal pavadinimą.</li>
+                    <li>Taigi, pradedame gal nuo paprasčiausiai HTML šablono susikūrimo: <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-spring-boot/screenshot49.jpg" alt="Kodo foto"></div></span></li>
+                    <li>Toliau, įkopijuoju paieškos puslapio šabloną. Jame yra įvedimo laukelis, mygtukas ir pastraipa. Jie visi yra su Bootstrap klasėmis/stiliais bei yra dar papildomų specialių "div'ų", "div'ai" tai tokios dėžutės į kurias skaldome puslapį. Ką reikėtų žinoti dabar, tai kad tiesiog įsikopijuoti šitą kodą ir pakeisti kur receptai, tai kad atitiktų jūsų dalyką: <div class="spoiler">
+                        <div class="spoiler-content">
+                            <pre><code class="language-html">&lt;!DOCTYPE HTML&gt;
+&lt;html xmlns:th="http://www.thymeleaf.org"&gt;
+&lt;head&gt;
+    &lt;title&gt;Getting Started: Serving Web Content&lt;/title&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /&gt;
+    &lt;link rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+            crossorigin="anonymous"&gt;
+&lt;/head&gt;
+&lt;body&gt;
+    &lt;div class="container d-flex flex-column  align-items-center"&gt;
+        &lt;div class="row col-8"&gt;
+            &lt;div class="input-group"&gt;
+                &lt;form class="d-flex w-100" method="get"&gt;
+                    &lt;input type="text"name="pavadinimas" class="form-control" placeholder="Įveskite recepto pavadinimą..."&gt;
+                    &lt;div class="input-group-append"&gt;
+                        &lt;button class="btn btn-secondary" type="submit"&gt;
+                            Ieškoti
+                        &lt;/button&gt;
+                    &lt;/div&gt;
+                &lt;/form&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;p class="mt-4 text-center"&gt;Įveskite pavadinimą, recepto, kurio norite ieškoti.&lt;/p&gt;
+    &lt;/div&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+                            </code></pre>
+                        </div>
+                        <div class="spoiler-button">
+                            <button></button>
+                        </div>
+                    </div></li>
+                    <li>Jeigu norite labiau aptarti ką tam tikros Bootstrap klasės ar HTML dalykai daro - klauskite per pamoką/discord.</li>
+                    <li>Kai įsidėjote, susikurkite Controlleryje GetMapping metodą, kuris returnintų į šį šabloną: <div class="spoiler">
+                        <div class="spoiler-content">
+                            <pre data-line="35-38"><code class="language-java">package lt.imones.puslapis.projektopavadinimas.controller;
+import lt.imones.puslapis.projektopavadinimas.model.entity.Receptas;
+import lt.imones.puslapis.projektopavadinimas.model.repository.ReceptasRepository;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+
+
+@Controller
+public class ReceptasMVController {
+    @Autowired
+    ReceptasRepository receptasRepository;
+
+    @GetMapping("/test/sveikinimas")
+    String testineFunkcija(Model model, @RequestParam String vardas) {
+        model.addAttribute("vardas", vardas);
+        return "testinis_puslapis.html";
+    }
+
+    @GetMapping("/test/receptas")
+    String testReceptas(Model model) {
+        Receptas receptas = receptasRepository.findById(1);
+        model.addAttribute("pavadinimas", receptas.getPavadinimas());
+        model.addAttribute("nurodymai", receptas.getNurodymai());
+        model.addAttribute("kalorijosPer100g", receptas.getKalorijosPer100g());
+        model.addAttribute("kaina", receptas.getKaina());
+        model.addAttribute("receptoIngredientai", receptas.getReceptoIngredientai());
+        model.addAttribute("receptoKurejas", receptas.getReceptoKurejas());
+        model.addAttribute("receptoKategorija", receptas.getReceptoKategorija());
+        return "parodyti_recepta.html";
+    }
+
+    @GetMapping("/test/paieska")
+    String testPaieska(Model model) {
+        return "rasti_recepta.html";
+    }
+}
+
+                            </code></pre>
+                        </div>
+                        <div class="spoiler-button">
+                            <button></button>
+                        </div>
+                    </div></li>
+                    <li>Na ir iš karto galime išbandyti puslapį, pažiūrėti ar jis atrodo tinkamai: <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-spring-boot/screenshot50.jpg" alt="Kodo foto"></div></span></li>
+                    <li>Sekantis žingsnis: reikia "susieti" mygtuką, su Recepto atvaizdavimo kontrolerio nuoroda. Kitaip sakant, turime pasakyti, kad kai paspaudžiame mygtuką, nueitų į "/test/receptas" nuorodą. Tą dažniausiai nurodytume "form" elementui prirašydami "th:action" atributą, toliau kabutėse rašytume @ ženklą, riestinius skliaustus ir riestinių skliaustų viduje įrašytume nuorodą: (16 eilutė): <div class="spoiler">
+                        <div class="spoiler-content">
+                            <pre><code class="language-html">&lt;!DOCTYPE HTML&gt;
+&lt;html xmlns:th="http://www.thymeleaf.org"&gt;
+&lt;head&gt;
+    &lt;title&gt;Getting Started: Serving Web Content&lt;/title&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /&gt;
+    &lt;link rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+            crossorigin="anonymous"&gt;
+&lt;/head&gt;
+&lt;body&gt;
+    &lt;div class="container d-flex flex-column  align-items-center"&gt;
+        &lt;div class="row col-8"&gt;
+            &lt;div class="input-group"&gt;
+                &lt;form th:action="@{/test/receptas/}" class="d-flex w-100" method="get"&gt;
+                    &lt;input type="text"name="pavadinimas" class="form-control" placeholder="Įveskite recepto pavadinimą..."&gt;
+                    &lt;div class="input-group-append"&gt;
+                        &lt;button class="btn btn-secondary" type="submit"&gt;
+                            Ieškoti
+                        &lt;/button&gt;
+                    &lt;/div&gt;
+                &lt;/form&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;p class="mt-4 text-center"&gt;Įveskite pavadinimą, recepto, kurio norite ieškoti.&lt;/p&gt;
+    &lt;/div&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+                            </code></pre>
+                        </div>
+                        <div class="spoiler-button">
+                            <button></button>
+                        </div>
+                    </div></li>
+                    <li>Kai tai padarėte - paleiskite programą, įeikite į tą paieškos puslapį, nieko nesuveskite (galite ir suvesti, bet tai nieko nepakeis) ir tiesiog paspauskite mygtuką. Jus turėtų perkelti į tą testinį puslapį, kuriame atvaizduoja kažkokį receptą. Bent jau pas mane tai tą receptą visada, kurio id yra 1. Jeigu tai įvyksta - viskas gerai "sujungimas" puslapių veikia, dabar tereikia padaryti, jog vienas puslapis perduotų informaciją kitams. T.y., jog paieškos puslapis perduotų pavadinimą tam puslapiui, kuris atvaizduoja receptą.</li>
+                    <li>Norint tai padaryti, reikia prirašyti "th:value" prie input elemento, tai padarome taip: 17 eilutė <div class="spoiler">
+                        <div class="spoiler-content">
+                            <pre data-line="17"><code class="language-html">&lt;!DOCTYPE HTML&gt;
+&lt;html xmlns:th="http://www.thymeleaf.org"&gt;
+&lt;head&gt;
+    &lt;title&gt;Getting Started: Serving Web Content&lt;/title&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /&gt;
+    &lt;link rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+            crossorigin="anonymous"&gt;
+&lt;/head&gt;
+&lt;body&gt;
+    &lt;div class="container d-flex flex-column  align-items-center"&gt;
+        &lt;div class="row col-8"&gt;
+            &lt;div class="input-group"&gt;
+                &lt;form th:action="@{/test/receptas/}" class="d-flex w-100" method="get"&gt;
+                    &lt;input th:value="${pavadinimas}" type="text" name="pavadinimas" class="form-control" placeholder="Įveskite recepto pavadinimą..."&gt;
+                    &lt;div class="input-group-append"&gt;
+                        &lt;button class="btn btn-secondary" type="submit"&gt;
+                            Ieškoti
+                        &lt;/button&gt;
+                    &lt;/div&gt;
+                &lt;/form&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;p class="mt-4 text-center"&gt;Įveskite pavadinimą, recepto, kurio norite ieškoti.&lt;/p&gt;
+    &lt;/div&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+                            </code></pre>
+                        </div>
+                        <div class="spoiler-button">
+                            <button></button>
+                        </div>
+                    </div></li>
+                    <li>Tada, pasakome, jog Controllerio metodas (atvaizdavimo) gauna pavadinimą per RequestParametrus: <div class="spoiler">
+                        <div class="spoiler-content">
+                            <pre data-line="23"><code class="language-java">package lt.imones.puslapis.projektopavadinimas.controller;
+import lt.imones.puslapis.projektopavadinimas.model.entity.Receptas;
+import lt.imones.puslapis.projektopavadinimas.model.repository.ReceptasRepository;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+
+
+@Controller
+public class ReceptasMVController {
+    @Autowired
+    ReceptasRepository receptasRepository;
+
+    @GetMapping("/test/sveikinimas")
+    String testineFunkcija(Model model, @RequestParam String vardas) {
+        model.addAttribute("vardas", vardas);
+        return "testinis_puslapis.html";
+    }
+
+    @GetMapping("/test/receptas")
+    String testReceptas(Model model, @RequestParam String pavadinimas) {
+        Receptas receptas = receptasRepository.findById(1);
+        model.addAttribute("pavadinimas", receptas.getPavadinimas());
+        model.addAttribute("nurodymai", receptas.getNurodymai());
+        model.addAttribute("kalorijosPer100g", receptas.getKalorijosPer100g());
+        model.addAttribute("kaina", receptas.getKaina());
+        model.addAttribute("receptoIngredientai", receptas.getReceptoIngredientai());
+        model.addAttribute("receptoKurejas", receptas.getReceptoKurejas());
+        model.addAttribute("receptoKategorija", receptas.getReceptoKategorija());
+        return "parodyti_recepta.html";
+    }
+
+    @GetMapping("/test/paieska")
+    String testPaieska(Model model) {
+        return "rasti_recepta.html";
+    }
+}
+
+                            </code></pre>
+                        </div>
+                        <div class="spoiler-button">
+                            <button></button>
+                        </div>
+                    </div></li>
+                    <li>Na, ir tada reikia galiausiai pasakyti, jog atvaizduojame visada ne pirmą receptą, o jog iš pradžių repository rastų receptą pagal gautą pavadinimą ir tik tada atvaizduotų. Na, tai daug taisyti nereikia: (3 eilutė) <div class="spoiler">
+                        <div class="spoiler-content">
+                            <pre data-line="3"><code class="language-java">@GetMapping("/test/receptas")
+String testReceptas(Model model, @RequestParam String pavadinimas) {
+    Receptas receptas = receptasRepository.findByPavadinimas(pavadinimas);
+    model.addAttribute("pavadinimas", receptas.getPavadinimas());
+    model.addAttribute("nurodymai", receptas.getNurodymai());
+    model.addAttribute("kalorijosPer100g", receptas.getKalorijosPer100g());
+    model.addAttribute("kaina", receptas.getKaina());
+    model.addAttribute("receptoIngredientai", receptas.getReceptoIngredientai());
+    model.addAttribute("receptoKurejas", receptas.getReceptoKurejas());
+    model.addAttribute("receptoKategorija", receptas.getReceptoKategorija());
+    return "parodyti_recepta.html";
+}
+                            </code></pre>
+                        </div>
+                        <div class="spoiler-button">
+                            <button></button>
+                        </div>
+                    </div></li>
+                    <li>Galima išbandyti jau visą programą. Paleiskite per naujo, nueikite į paieškos puslapį, suveskite pavadinimą ir paspauskite mygtuką. Turėtų viskas veikti. Jei ne - kreipkitės.</li>
                 </div>
             </div>
         </div>
